<resources>
    <string name="app_name">ITC Meet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_forgot_password">Recover lost password</string>

    <string name="login_progress_signing_in">Signing in&#8230;</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_series">Series</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_matched">matched</string>
    <string name="itc_meet">ITC Meet</string>
    <string name="by_using_itc_meet_you_agree_to_send_location_data">By using ITC Meet you agree to send location data.</string>
    <string name="itc_meet_2016">ITC Meet 2016</string>
    <string name="interests">Interests</string>
    <string name="minigame_not_completed_yet">minigame not completed yet</string>
    <string name="user_name">User name:</string>
    <string name="send">SEND</string>
    <string name="find_matches">FIND MATCHES</string>
    <string name="my_profile">My profile</string>
    <string name="mini_game">Mini Game</string>
    <string name="log_out">Log out</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="scan_for_matches">Scan For Matches</string>
    <string name="chat">CHAT</string>
    <string name="name">Name</string>
</resources>
