<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baasbox.ITC_Meet.ui.MainScreen">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:id="@+id/lProfile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:background="#4CAF50"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mini_game"
        android:id="@+id/lSeries"
        android:layout_below="@+id/lProfile"
        android:layout_alignLeft="@+id/lProfile"
        android:layout_alignStart="@+id/lProfile"
        android:background="#4CAF50"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:id="@+id/lLogout"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/lSeries"
        android:layout_alignStart="@+id/lSeries"
        android:layout_marginBottom="58dp"
        android:layout_alignRight="@+id/lSeries"
        android:layout_alignEnd="@+id/lSeries"
        android:background="#607D8B"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Logged in as: "
        android:id="@+id/loggedInAs"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/userN"
        android:layout_below="@+id/loggedInAs"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_for_matches"
        android:id="@+id/lScan"
        android:layout_below="@+id/lSeries"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="#CDDC39"
        android:textSize="17sp"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:id="@+id/messageTracker"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:layout_below="@+id/userN"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
